WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61832
PluginControllerProxy::platformGeometryDidChange does not compile with Webkit2 Qt (plugins enabled)
https://bugs.webkit.org/show_bug.cgi?id=61832
Summary
PluginControllerProxy::platformGeometryDidChange does not compile with Webkit...
Oleg Romashin (:romaxa)
Reported
2011-05-31 18:06:40 PDT
PluginControllerProxy::platformGeometryDidChange - does not compile due to changed function interface. Let's fix it in order to get it compiling
Attachments
Fix platformGeometryDidChange implementation according to definition, build fix
(1.24 KB, patch)
2011-05-31 18:34 PDT
,
Oleg Romashin (:romaxa)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oleg Romashin (:romaxa)
Comment 1
2011-05-31 18:34:19 PDT
Created
attachment 95529
[details]
Fix platformGeometryDidChange implementation according to definition, build fix
WebKit Commit Bot
Comment 2
2011-06-01 01:05:10 PDT
Comment on
attachment 95529
[details]
Fix platformGeometryDidChange implementation according to definition, build fix Clearing flags on attachment: 95529 Committed
r87783
: <
http://trac.webkit.org/changeset/87783
>
WebKit Commit Bot
Comment 3
2011-06-01 01:05:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug