2011-06-01  Oleg Romashin  <romaxa@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        platformGeometryDidChange function definition was changed everywhere except Qt.
        This is fix for Qt WK2 plugins compilation
        https://bugs.webkit.org/show_bug.cgi?id=61832

        * PluginProcess/qt/PluginControllerProxyQt.cpp:
        (WebKit::PluginControllerProxy::platformGeometryDidChange):

Canonical link: https://commits.webkit.org/77261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87783 268f45cc-cd09-0410-ab3c-d52691b4dbfc